This file documents the revision history for mod_gearman.

next:
          - added 'route_eventhandler_like_checks' option
          - fixed leaking FDs on reloading neb

1.4.2 Thu Jan 10 10:56:37 CET 2013
          - force check on orphaned events
          - added mini epn
          - added logrotate config (Ricardo Maraschini)
          - added new option load_limit1,5,15 to prevent new workers from spawning under heavy load. (sponsored by Ovido GmbH)

1.4.0 Thu Sep 25 22:14:31 CEST 2012
          - implemented support for nagios 4

1.3.8 Sun Aug 19 16:52:13 CEST 2012
          - fixed sending 2 results back when hit timeout

1.3.6 Mon Jul 19 17:08:19 CEST 2012
          - added 'use_uniq_jobs' option
          - allow gearman_top to display multiple servers (Thomas Dohl)
          - fixed typo in 'timeout_return' docs
          - added send_gearman.pl (Vincent Candeau)
          - Bugfixes:
            - removed newlines in perllib breaking build on opensuse

1.3.4 Tue Jun 19 14:58:14 CEST 2012
          - worker: added 'timeout_return' config option to
                    set return code for checks running into timeout
          - send_gearman: make timeout configurable
          - send_gearman: added new mode which sends one result per line
          - gearman_top: allow floating number for interval
          - fixed killing worker on reload, worker now finishes current job
          - fixed executing jobs while restarting worker
          - fixed potential problem on deinitializing epn

1.3.2  Sun May 27 11:39:55 CEST 2012
          - fixed problem with commands containing ENV definitions

1.3.0  Fri Apr 27 16:45:02 CEST 2012
          - fixed setting queues by custom variables

1.2.8  Thu Apr 12 13:37:20 CEST 2012
          - add new new option 'accept_clear_results'
          - added batch mode for gearman_top
          - added gearman_proxy to package
          - fixed problem when neb module is not reconnecting