@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 next:
           - added 'route_eventhandler_like_checks' option
           - fixed leaking FDs on reloading neb
+          - install mini-epn when epn is enabled
 
 1.4.2 Thu Jan 10 10:56:37 CET 2013
           - force check on orphaned events
